<resources>
    <string name="app_name">SL</string>
    <string name="default_notification_channel_id">CareApp</string>
    <string name="incoming_call_channel_id">calling_in_app</string>
    <string name="incoming_call_channel_name">Calling In App</string>
    <string name="app_is_calling">ケアプリオーディオ</string>
    <string name="sign_in_with_email">メールアドレスでログイン</string>
    <string name="trouble_logging">ログインでお困りの方</string>
    <string name="service_account">利用規約</string>
    <string name="privacy_policy">プライバシーポリシー</string>
    <string name="text_register_name">保存</string>
    <string name="title_register_name">ニックネーム</string>
    <string name="limit_number_character">10</string>
    <string name="hint_input_email">メールアドレスを入力</string>
    <string name="hint_input_email_register">メールアドレス</string>
    <string name="input_email">登録</string>
    <string name="title_input_email">会員登録</string>
    <string name="login">ログイン</string>
    <string name="alert_error_email">メールアドレスが正しくありません</string>
    <string name="title_search_category">お悩み</string>
    <string name="please_enter_valid_email">有効なメールアドレスを入力してください</string>
    <string name="please_enter_valid_name">ニックネームを入力してください</string>
    <string name="link_privacy">利用を継続する事でSPARK LIVEの<![CDATA[<br /><b><font color=#B47AFF><a href="link">利用規約</a></font></b>]]>に同意したものとみなされます。</string>
    <string name="link_privacy_login">ログインすると<![CDATA[<b><font color=#B47AFF><a href="link">利用規約</a></font></b>]]>に承認します。</string>
    <string name="already_have_acc">アカウントをお持ちですか？<![CDATA[<b><font color=#B47AFF><a href="link">ログインする</a></font></b>]]></string>
    <string name="login_note">ログインすると<![CDATA[<b><font color=#B47AFF><a href="link">利用規約</a></font></b>]]>に承認します。</string>
    <string name="start_consultation">相談をはじめる</string>
    <string name="title_favorite_alert">先生をお気に入りに追加しますか？</string>
    <string name="sub_title_favorite_alert">お気に入り登録するとオンラインになった時に通知を受け取ることができます。</string>
    <string name="confirm_favorite_alert">お気に入りに追加する</string>
    <string name="cancel_favorite_alert">今はしない</string>
    <string name="favorited_alert">すでにお気に入り登録済みです</string>
    <string name="title_block_alert">先生をお気に入りに追加しますか？</string>
    <string name="confirm_block_alert">はい</string>
    <string name="no_block_alert">いいえ</string>
    <string name="cancel_block_alert">キャンセル</string>
    <string name="to_release">解除する</string>
    <string name="unblock">さんのブロックを解除しますか？</string>
    <string name="label_gender">性別</string>
    <string name="label_male">男性</string>
    <string name="label_female">女性</string>
    <string name="label_other">その他</string>
    <string name="text_OK">OK</string>
    <string name="point">%spts</string>
    <string name="tab_home">ホーム</string>
    <string name="tab_lab">履歴/フォロー</string>
    <string name="tab_chat">メッセージ</string>
    <string name="tab_rank">ランキング</string>
    <string name="tab_my_page">マイページ</string>
    <string name="content_notification">%1$sさんから\nメッセージが届きました</string>
    <string name="title_navigation_rank">ランキング</string>
    <string name="title_navigation_list_message">相談履歴</string>
    <string name="title_navigation_my_page">マイメニュー</string>
    <string name="title_difficult_with_login">ログインでお困りの方</string>
    <string name="title_terms">利用規約</string>
    <string name="title_privacy">プライバシーポリシー</string>
    <string name="title_verify_code">認証コード入力</string>
    <string name="please_enter_exactly_code">正しいコードを入力してください</string>
    <string name="please_enter_code">届いたメールに記載されている\n4桁の数字を入力してください。</string>
    <string name="click_to_not_receive_email"><![CDATA[<b><font color=#B47AFF><a href="link">メールが届かない場合はコチラ</a></font></b>]]></string>
    <string name="content_error_over_five_times">認証に失敗しました。\nお手数ですが最初からやり直してください。</string>
    <string name="title_do_not_receive_email">メールが届かない場合</string>
    <string name="please_sure_email_address_correct">入力されたメールアドレスに間違いがないか確認してください。</string>
    <string name="correct_your_email_address">メールアドレスを修正</string>
    <string name="please_check_email_reception_setting">メールの受信設定を確認してください</string>
    <string name="description_information_help"><![CDATA[<font color=\'#F0F0F0\'>お客様が迷惑メール対策などで、ドメイン指定受信を設定されている場合に、メールが正しく届かないことがあります。</font><br />
    「 <font color=\'#FF2875\'><b>no-reply@mail.careapp.jp</b></font> 」<font color=\'#E3DFEF\'>からのメールを受信できるように設定をお願いいたします。詳しくはヘルプをご参照ください。<br />
     異常を設定完了後に「確認用メールを再送信」ボタンからメールを受け取ってください。</font>]]></string>
    <string name="resend_confirmation_email">確認用メールを再送信</string>
    <string name="above_method_not_solve_problem">上記の方法で解決しない場合</string>
    <string name="contact_us">お問い合わせ</string>
    <string name="title_reregister">再入会</string>
    <string name="account_has_been_withdrawn">こちらのアカウントは\n本アプリを退会されています</string>
    <string name="tutorial_reregister">再入会を希望される場合は、下記フォームからご連絡ください。24時間以内にご入力いただいたメールアドレス宛に再入会のご案内をお送りいたします。</string>
    <string name="sub_title_edt_reregister">メールアドレス</string>
    <string name="hint_edit_reregister">入力してください</string>
    <string name="would_like_re_enroll">再入会を希望する</string>
    <string name="account_suspended">こちらのアカウントは現在停止中となり、ご利用いただくことができません。</string>
    <string name="please_contact_with_have_question">ご不明な点がある場合は、お問い合わせフォームよりご連絡下さいませ。</string>
    <string name="description_bad_user"><![CDATA[<font color=\'#E3DFEF\'>こちらのアカウントは現在停止中となり、ご利用いただくことができません。</font><br /><br /><font color=\'#E3DFEF\'>ご不明な点がある場合は、</font>
    <font color=\'#978DFF\'><u>お問い合わせフォーム</u></font><font color=\'#E3DFEF\'>よりご連絡下さいませ。</font>]]></string>
    <string name="sheet">お悩みシート</string>
    <string name="favorite">お気に入り</string>
    <string name="buy_point">ポイント購入</string>
    <string name="select_payment_method">決済方法選択</string>
    <string name="live_stream_buy_point">購入する</string>
    <string name="news">お知らせ</string>
    <string name="alert">通知設定</string>
    <string name="help">ヘルプ</string>
    <string name="setting">設定</string>
    <string name="contact">お問い合わせ</string>
    <string name="login_without_email_caution">アカウント連携で500ptsプレゼント中</string>
    <string name="mypage_title">マイメニュー</string>
    <string name="edit_profile">プロフィール編集</string>
    <string name="get_point_free">初回限定★お得にポイント購入！</string>
    <string name="code">CODE:</string>
    <string name="profile_information">プロフィール情報</string>
    <string name="account_information">アカウント情報</string>
    <string name="nick_name">ニックネーム</string>
    <string name="gender">性別</string>
    <string name="age">年齢</string>
    <string name="age_raw">歳</string>
    <string name="member_code">会員CODE</string>
    <string name="retention_point">保持ポイント</string>
    <string name="email_address">メールアドレス</string>
    <string name="title_edit_profile">プロフィール</string>
    <string name="updated_my_profile">プロフィールを更新しました。</string>
    <string name="unregistered">未登録</string>
    <string name="edit_profile_unregister_mail_caution">※購入ポイントやアカウントの紛失を防ぐため、メールアドレスを登録しアカウント連携を行って下さい。</string>
    <string name="accepting">受付中</string>
    <string name="release">解除</string>
    <string name="favorite_counselor">お気に入り一覧</string>
    <string name="leaving">去る</string>
    <string name="title_buy_point">ポイント購入</string>
    <string name="my_point">所持ポイント</string>
    <string name="first_buy_point">1度だけ</string>
    <string name="first_point">3,300pts</string>
    <string name="first_sale_point">990ptsお得!</string>
    <string name="first_money">¥3,300</string>
    <string name="insufficient_points">ポイントが不足しています</string>
    <string name="format_point">所持ポイント：%spts</string>
    <string name="format_point_pts">%spts</string>
    <string name="cancel">キャンセル</string>
    <string name="buy_point_suscess">ポイント購入が完了しました。</string>
    <string name="let_buy_point">まずはポイントを購入しましょう</string>
    <string name="not_found_performer">該当の女性は見つかりませんでした</string>
    <string name="point_purchase">ポイント購入</string>
    <string name="point_purchase_under_1000">所持ポイントが1000ptsになりました</string>
    <string name="point_purchase_under_500">所持ポイントが500ptsになりました</string>
    <string name="point_purchase_reason">このままだと\nテキストテキストテキストテキスト</string>
    <string name="pointLoadingText">しばらくお待ちください</string>
    <string name="pointButtonText">￥%1$d/%2$dpts</string>
    <string name="enter_your_profile_to_start">プロフィールを入力して\n早速はじめましょう！</string>
    <string name="register_complete">認証が完了しました</string>
    <string name="change_your_profile">プロフィールはあとから変更できます</string>
    <string name="lb_name">お名前</string>
    <string name="lb_gender">性別</string>
    <string name="lb_birthday">生年月日</string>
    <string name="required">必須</string>
    <string name="please_enter">入力してください</string>
    <string name="please_choose">選択してください</string>
    <string name="receive_email">メルマガ受信</string>
    <string name="content_receive_email">メルマガ受信を許可して頂くと、ケアプリからのお得なお知らせをメールで受け取ることができます。</string>
    <string name="receiver_notice_email">メッセージ受信通知メール</string>
    <string name="term_and_service">利用規約</string>
    <string name="tv_agree">に同意する</string>
    <string name="start">この条件で検索</string>
    <string name="un_registration">ケアプリを退会するとお持ちの●●ポイントが失効します。</string>
    <string name="withdrawal_confirm">新しくアカウントを作り直しても体験ポイントはもらえなくなります、退会しますか？メールアドレス連携をすれば、再入会や再インストールしても同じアカウントをご利用いただけます。</string>
    <string name="link_email">メールアドレスを連携する</string>
    <string name="updated_profile">プロフィールを更新しました</string>
    <string name="hint_edit_email">メールアドレス</string>
    <string name="edit_error_email">有効なメールアドレスを入力してください</string>
    <string name="confirm_edit_email">変更する</string>
    <string name="purchase_points">ポイント購入</string>
    <string name="price_point">%dpts</string>
    <string name="add_favorite">お気に入り</string>
    <string name="consult">相談する</string>
    <string name="consult_by_chat">チャット相談</string>
    <string name="consult_by_call">電話相談</string>
    <string name="specialty_genre">得意ジャンル</string>
    <string name="message_teacher">先生からのメッセージ</string>
    <string name="reception_schedule">受付スケジュール</string>
    <string name="title_noti">相談可能になったら通知する</string>
    <string name="presence_status_waiting">待機中</string>
    <string name="presence_status_live_streaming">ライブ配信中</string>
    <string name="presence_status_private_delivery">プライベート配信中</string>
    <string name="presence_status_offline">オフライン</string>
    <string name="remove_favorite">追加済</string>
    <string name="report">通報</string>
    <string name="report_content">通報内容</string>
    <string name="thank_for_understanding">原則、通報頂いた内容にはご返信いたしておりません。あらかしめご了承下さいませ。</string>
    <string name="title_report_enter_info">規約に違反している配信が確認できた場合は、こちらより情報を入力して下さい。</string>
    <string name="report_btn">通報する</string>
    <string name="hint_report">具体的な理由を入力してください</string>
    <string name="save">保存</string>
    <string name="cancel_search">クリア</string>
    <string name="hint_search">名前でさがす</string>
    <string name="your_worries">お悩み</string>
    <string name="number_review">レビューあり</string>
    <string name="review_average">受付中のみ</string>
    <string name="diamond">Diamond</string>
    <string name="platinum">Platinum</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="basic">Basic</string>
    <string name="teacher_stage">先生のステージ</string>
    <string name="review">レビュー</string>
    <string name="three_or_more">3点以上</string>
    <string name="four_or_more">4点以上</string>
    <string name="status">ステータス</string>
    <string name="profile_message">プロフィールメッセージ</string>
    <string name="please_enter_profile_message">プロフィールメッセージを入力してください。</string>
    <string name="send_report">送信</string>
    <string name="please_enter_reason">具体的な理由を入力してください。</string>
    <string name="thanks_for_contact_us">お問い合わせありがとうございます</string>
    <string name="setting_contact_finish_text_1">数日以内にご登録メールアドレス宛にご連絡いたしますので、今しばらくお待ちくださいませ。</string>
    <string name="setting_contact_finish_text_2">1週間経ってもご連絡が届かない場合\n・迷惑フォルダに届いている\n・ご登録メールアドレスが間違っている\n・ドメイン指定受信を設定している\n info@slslsl.jpの受信を許可してください
    </string>
    <string name="input_name">なまえで検索</string>
</resources>