<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_0B002C"
        android:orientation="vertical"
        tools:context=".android.ui.review_mode.userDetailReport.RMUserDetailReportFragment">

        <jp.careapp.counseling.android.utils.customView.ToolBarCommon
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:src_right="@string/send_report"
            app:src_left="@drawable/ic_arrow_left"
            app:string_title="@string/report" />

        <EditText
            android:id="@+id/edtReasonReport"
            style="@style/text_14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:layout_marginVertical="@dimen/margin_16"
            android:background="@null"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/please_enter_reason"
            android:textColor="@color/color_E3DFEF"
            android:textColorHint="#70658d" />
    </LinearLayout>
</layout>