<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/duck_egg_blue"
        android:orientation="vertical"
        tools:context=".android.ui.review_mode.settingProfileMessage.RMSettingProfileMessageFragment">

        <jp.careapp.counseling.android.utils.customView.ToolBarCommon
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:color_title="@color/color_070707"
            app:src_btn_right="@string/save"
            app:src_left="@drawable/ic_rm_arrow_left"
            app:string_title="@string/profile_message" />

        <EditText
            android:id="@+id/edtProfileMessage"
            style="@style/text_14"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:layout_marginVertical="@dimen/margin_16"
            android:background="@drawable/bg_rm_nickname_edt"
            android:padding="@dimen/margin_16"
            android:gravity="start"
            android:hint="@string/please_enter_profile_message"
            android:textColor="@color/color_070707"
            android:textColorHint="@color/color_c0c3c9" />
    </LinearLayout>
</layout>